<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
	    android:id="@+id/menu_overflow"
	    android:title="@string/menu_actionbar"
      	android:icon="@drawable/ic_action_overflow_white"
        android:showAsAction="ifRoom|withText" />

	    <menu>

            <item
                android:id="@+id/item_commentaire"
                android:title="@string/item_commentaire" />

            <item
                android:id="@+id/item_preferences"
                android:title="@string/item_preferences" />

            <item
                android:id="@+id/item_aide"
                android:title="@string/item_aide" />

            <item 
                android:id="@+id/item_about"
                android:title="@string/item_about" />

        </menu>

</menu>